[package]
name = "rusty_password_manager"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.16", features = ["derive"] }
home = "0.5.5"
magic-crypt = "3.1.12"
passwords = "3.1.13"
rpassword = "7.2.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

[build-dependencies]
clap = "4.3.16"
clap_generate = "3.0.3"
