[package]
name = "rusty"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.16", features = ["derive"] }
clap_complete = "4.3.2"
home = "0.5.5"
magic-crypt = "3.1.12"
passwords = "3.1.13"
rpassword = "7.2.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
walkdir = "2.3.3"

[build-dependencies]
clap = "4.3.16"
